--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "axios": "^1.8.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.17",
     "typescript": "^4.9.5",
@@ -26,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint": " npx eslint 'src/**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +51,13 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@eslint/css": "^0.6.0",
+    "@eslint/js": "^9.24.0",
+    "@eslint/json": "^0.11.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "gh-pages": "^6.3.0",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.30.1"
   }
 }
