--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
+    "http-proxy-middleware": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.0",
@@ -54,6 +55,7 @@
     "@eslint/css": "^0.6.0",
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
+    "@types/react-query": "^1.2.8",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
