--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@types/react-query": "^1.2.8",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
