--- a/package.json
+++ b/package.json
@@ -6,14 +6,9 @@
   "dependencies": {
     "@tanstack/react-query": "^5.74.4",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "http-proxy-middleware": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -21,13 +16,12 @@
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.17",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npx jest",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -52,15 +46,30 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/css": "^0.6.0",
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@types/react-query": "^1.2.8",
     "@types/styled-components": "^5.1.34",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-jest": "^29.6.3",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react-test-renderer": "^19.1.0",
+    "ts-jest": "^29.3.2",
     "typescript-eslint": "^8.30.1"
   }
 }
